# python

./: !!links.txt  !StockHelper_List.csv  !StockHelper_List.py  !madlibs.py  0-q_table.npy  1.03_Notes.py  10000-q_table.npy  15000-q_table.npy  1Deploy.py  1Test.py  1Train.py  20000-q_table.npy  24999-q_table.npy  25000-q_table.npy  30000-q_table.npy  32000-q_table.npy  35000-q_table.npy  40000-q_table.npy  45000-q_table.npy  49999-q_table.npy  AMD_model.keras  AMD_scaler.npy  AMZN_model.keras  AMZN_scaler.npy  BDayList.json  Binary.py  CMCSA_model.keras  CMCSA_scaler.npy  CODER.py  Chess.py  DG_model.keras  DG_scaler.npy  DIS_model.keras  DIS_scaler.npy  DOCU_model.keras  DOCU_scaler.npy  DoNow_4.03.py  EyeTracker  GOOGL_model.keras  GOOGL_scaler.npy  (+115 more)
AgentTaskProgression/: .gitignore  PORTFOLIO.md  README.md  app.py  calculator.py  launcher.py  layout_config.json  pyproject.toml  requirements.txt  run.bat
AgentTaskProgression/WorkingAI IDE (AIDE)/: app.py  build_exe.py  launcher.py  layout_config.json
AgentTaskProgression/agents/: __init__.py  chat_agent.py  coder.py  coder_agent.py  fixer.py  fixer_agent.py  gui_coder_agent.py  image_agent.py  planner.py  planner_agent.py  reviser_agent.py  tester_agent.py
AgentTaskProgression/core/: agent_orchestrator.py  ai_manager.py  base_agent.py  keybind_manager.py  linter.py  llm.py  planning_system.py  plugin_manager.py  preview_manager.py  project_state.py  security.py  test_runner.py  vision.py
AgentTaskProgression/github/: __init__.py  repo.py
AgentTaskProgression/gui/: account_dialog.py  activity_bar.py  (+13 more)
(+42 files in other folders)
